@@ -29,9 +29,8 @@ import java.util.List;
 import java.util.Objects;
 import net.kyori.adventure.text.format.Style;
 import net.kyori.adventure.text.format.TextDecoration;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.VisibleForTesting;
+import org.jspecify.annotations.Nullable;
 
 final class ComponentCompaction {
   @VisibleForTesting
@@ -40,7 +39,7 @@ final class ComponentCompaction {
   private ComponentCompaction() {
   }
 
-  static Component compact(final @NotNull Component self, final @Nullable Style parentStyle) {
+  static Component compact(final Component self, final @Nullable Style parentStyle) {
     final List<Component> children = self.children();
     Component optimized = self.children(Collections.emptyList());
     if (parentStyle != null) {
@@ -64,7 +63,7 @@ final class ComponentCompaction {
       final TextComponent textComponent = (TextComponent) optimized;
 
       if (textComponent.content().isEmpty()) {
-        final Component child = children.get(0);
+        final Component child = children.getFirst();
 
         // merge the updated/parent style into the child before we return
         return child.style(child.style().merge(optimized.style(), Style.Merge.Strategy.IF_ABSENT_ON_TARGET)).compact();
@@ -80,9 +79,7 @@ final class ComponentCompaction {
 
     // optimize all children
     final List<Component> childrenToAppend = new ArrayList<>(children.size());
-    for (int i = 0; i < children.size(); ++i) {
-      Component child = children.get(i);
-
+    for (Component child : children) {
       // compact child recursively
       child = compact(child, childParentStyle);
 
@@ -101,14 +98,14 @@ final class ComponentCompaction {
     // try to merge children into this parent component
     if (isText(optimized)) {
       while (!childrenToAppend.isEmpty()) {
-        final Component child = childrenToAppend.get(0);
+        final Component child = childrenToAppend.getFirst();
         final Style childStyle = child.style().merge(childParentStyle, Style.Merge.Strategy.IF_ABSENT_ON_TARGET);
 
         if (isText(child) && Objects.equals(childStyle, childParentStyle)) {
           // merge child components into the parent if they are a text component with the same effective style
           // in context of their parent style
           optimized = joinText((TextComponent) optimized, (TextComponent) child);
-          childrenToAppend.remove(0);
+          childrenToAppend.removeFirst();
 
           // if the merged child had any children, retain them
           childrenToAppend.addAll(0, child.children());
@@ -185,7 +182,7 @@ final class ComponentCompaction {
   * @param parentStyle style from component's parents, for context
   * @return a new, simplified style
   */
-  private static @NotNull Style simplifyStyleForBlank(final @NotNull Style style, final @Nullable Style parentStyle) {
+  private static Style simplifyStyleForBlank(final Style style, final @Nullable Style parentStyle) {
     if (!SIMPLIFY_STYLE_FOR_BLANK_COMPONENTS) {
       // todo: can this be fixed a better way?
       // https://github.com/KyoriPowered/adventure/issues/849
