@@ -37,14 +37,9 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.regex.Pattern;
-import java.util.stream.Stream;
-import net.kyori.adventure.internal.Internals;
 import net.kyori.adventure.key.Key;
 import net.kyori.adventure.util.TriState;
-import net.kyori.examination.Examinable;
-import net.kyori.examination.ExaminableProperty;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 
 import static java.util.Objects.requireNonNull;
 
@@ -54,10 +49,10 @@ import static java.util.Objects.requireNonNull;
  * @param <T> the value of the translation store
  * @since 4.20.0
  */
-public abstract class AbstractTranslationStore<T> implements Examinable, TranslationStore<T> {
-  private final @NotNull Key name;
+public abstract class AbstractTranslationStore<T> implements TranslationStore<T> {
+  private final Key name;
   private final Map<String, Translation> translations = new ConcurrentHashMap<>();
-  private volatile @NotNull Locale defaultLocale = Locale.US;
+  private volatile Locale defaultLocale = Locale.US;
 
   /**
    * Creates a new abstract translation store with a given name.
@@ -65,7 +60,7 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
    * @param name the name
    * @since 4.20.0
    */
-  protected AbstractTranslationStore(final @NotNull Key name) {
+  protected AbstractTranslationStore(final Key name) {
     this.name = Objects.requireNonNull(name, "name");
   }
 
@@ -77,48 +72,48 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
    * @return the translation, or {@code null} if none exists for this key
    * @since 4.20.0
    */
-  protected @Nullable T translationValue(final @NotNull String key, final @NotNull Locale locale) {
+  protected @Nullable T translationValue(final String key, final Locale locale) {
     final Translation translation = this.translations.get(requireNonNull(key, "key"));
     if (translation == null) return null;
     return translation.translate(requireNonNull(locale, "locale"));
   }
 
   @Override
-  public final boolean contains(final @NotNull String key) {
+  public final boolean contains(final String key) {
     return this.translations.containsKey(key);
   }
 
   @Override
-  public final boolean contains(final @NotNull String key, final @NotNull Locale locale) {
+  public final boolean contains(final String key, final Locale locale) {
     final Translation translation = this.translations.get(requireNonNull(key, "key"));
     if (translation == null) return false;
     return translation.translations.get(requireNonNull(locale, "locale")) != null;
   }
 
   @Override
-  public final boolean canTranslate(final @NotNull String key, final @NotNull Locale locale) {
+  public final boolean canTranslate(final String key, final Locale locale) {
     final Translation translation = this.translations.get(requireNonNull(key, "key"));
     if (translation == null) return false;
     return translation.translate(requireNonNull(locale, "locale")) != null;
   }
 
   @Override
-  public final void defaultLocale(final @NotNull Locale locale) {
+  public final void defaultLocale(final Locale locale) {
     this.defaultLocale = requireNonNull(locale, "locale");
   }
 
   @Override
-  public final void register(final @NotNull String key, final @NotNull Locale locale, final @NotNull T translation) {
+  public final void register(final String key, final Locale locale, final T translation) {
     this.translations.computeIfAbsent(key, Translation::new).register(locale, translation);
   }
 
   @Override
-  public final void registerAll(final @NotNull Locale locale, final @NotNull Map<String, T> translations) {
+  public final void registerAll(final Locale locale, final Map<String, T> translations) {
     this.registerAll(locale, translations.keySet(), translations::get);
   }
 
   @Override
-  public final void registerAll(final @NotNull Locale locale, final @NotNull Set<String> keys, final Function<String, T> function) {
+  public final void registerAll(final Locale locale, final Set<String> keys, final Function<String, T> function) {
     IllegalArgumentException firstError = null;
     int errorCount = 0;
     for (final String key : keys) {
@@ -141,31 +136,24 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
   }
 
   @Override
-  public final void unregister(final @NotNull String key) {
+  public final void unregister(final String key) {
     this.translations.remove(key);
   }
 
   @Override
-  public final @NotNull Key name() {
+  public final Key name() {
     return this.name;
   }
 
   @Override
-  public final @NotNull TriState hasAnyTranslations() {
+  public final TriState hasAnyTranslations() {
     return TriState.byBoolean(!this.translations.isEmpty());
-  }
-
-  @Override
-  public final @NotNull Stream<? extends ExaminableProperty> examinableProperties() {
-    return Stream.of(ExaminableProperty.of("translations", this.translations));
   }
 
   @Override
   public final boolean equals(final Object other) {
     if (this == other) return true;
-    if (!(other instanceof AbstractTranslationStore)) return false;
-
-    final AbstractTranslationStore<?> that = (AbstractTranslationStore<?>) other;
+    if (!(other instanceof AbstractTranslationStore<?> that)) return false;
 
     return this.name.equals(that.name);
   }
@@ -175,24 +163,19 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
     return this.name.hashCode();
   }
 
-  @Override
-  public final @NotNull String toString() {
-    return Internals.toString(this);
-  }
-
-  private final class Translation implements Examinable {
+  private final class Translation {
     private final String key;
     private final Map<Locale, T> translations;
 
-    private Translation(final @NotNull String key) {
+    private Translation(final String key) {
       this.key = requireNonNull(key, "key");
       this.translations = new ConcurrentHashMap<>();
     }
 
-    private @Nullable T translate(final @NotNull Locale locale) {
+    private @Nullable T translate(final Locale locale) {
       T format = this.translations.get(requireNonNull(locale, "locale"));
       if (format == null) {
-        format = this.translations.get(new Locale(locale.getLanguage())); // try without country
+        format = this.translations.get(Locale.of(locale.getLanguage())); // try without country
         if (format == null) {
           format = this.translations.get(AbstractTranslationStore.this.defaultLocale); // try local default locale
           if (format == null) {
@@ -203,37 +186,22 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
       return format;
     }
 
-    private void register(final @NotNull Locale locale, final @NotNull T translation) {
+    private void register(final Locale locale, final T translation) {
       if (this.translations.putIfAbsent(requireNonNull(locale, "locale"), requireNonNull(translation, "translation")) != null) {
         throw new IllegalArgumentException(String.format("Translation already exists: %s for %s", this.key, locale));
       }
     }
 
     @Override
-    public @NotNull Stream<? extends ExaminableProperty> examinableProperties() {
-      return Stream.of(
-        ExaminableProperty.of("key", this.key),
-        ExaminableProperty.of("translations", this.translations)
-      );
-    }
-
-    @Override
     public boolean equals(final Object other) {
       if (this == other) return true;
-      if (!(other instanceof AbstractTranslationStore.Translation)) return false;
-      final AbstractTranslationStore<?>.Translation that = (AbstractTranslationStore<?>.Translation) other;
-      return this.key.equals(that.key) &&
-        this.translations.equals(that.translations);
+      if (!(other instanceof AbstractTranslationStore<?>.Translation that)) return false;
+      return this.key.equals(that.key) && this.translations.equals(that.translations);
     }
 
     @Override
     public int hashCode() {
       return Objects.hash(this.key, this.translations);
-    }
-
-    @Override
-    public String toString() {
-      return Internals.toString(this);
     }
   }
 
@@ -255,7 +223,7 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
      * @param name the name
      * @since 4.20.0
      */
-    protected StringBased(final @NotNull Key name) {
+    protected StringBased(final Key name) {
       super(name);
     }
 
@@ -267,10 +235,10 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
      * @return the parsed type
      * @since 4.20.0
      */
-    protected abstract @NotNull T parse(final @NotNull String string, final @NotNull Locale locale);
+    protected abstract T parse(final String string, final Locale locale);
 
     @Override
-    public final void registerAll(final @NotNull Locale locale, final @NotNull Path path, final boolean escapeSingleQuotes) {
+    public final void registerAll(final Locale locale, final Path path, final boolean escapeSingleQuotes) {
       try (final BufferedReader reader = Files.newBufferedReader(path, StandardCharsets.UTF_8)) {
         this.registerAll(locale, new PropertyResourceBundle(reader), escapeSingleQuotes);
       } catch (final IOException e) {
@@ -279,7 +247,7 @@ public abstract class AbstractTranslationStore<T> implements Examinable, Transla
     }
 
     @Override
-    public final void registerAll(final @NotNull Locale locale, final @NotNull ResourceBundle bundle, final boolean escapeSingleQuotes) {
+    public final void registerAll(final Locale locale, final ResourceBundle bundle, final boolean escapeSingleQuotes) {
       this.registerAll(locale, bundle.keySet(), key -> {
         final String format = bundle.getString(key);
         return this.parse(
