@@ -31,8 +31,7 @@ import net.kyori.adventure.key.Key;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TranslatableComponent;
 import net.kyori.adventure.util.TriState;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 
 /**
  * A message translator.
@@ -57,15 +56,15 @@ public interface Translator {
    * @return a locale
    * @since 4.0.0
    */
-  static @Nullable Locale parseLocale(final @NotNull String string) {
+  static @Nullable Locale parseLocale(final String string) {
     final String[] segments = string.split("_", 3); // language_country_variant
     final int length = segments.length;
     if (length == 1) {
-      return new Locale(string); // language
+      return Locale.of(string); // language
     } else if (length == 2) {
-      return new Locale(segments[0], segments[1]); // language + country
+      return Locale.of(segments[0], segments[1]); // language + country
     } else if (length == 3) {
-      return new Locale(segments[0], segments[1], segments[2]); // language + country + variant
+      return Locale.of(segments[0], segments[1], segments[2]); // language + country + variant
     }
     return null;
   }
@@ -78,7 +77,7 @@ public interface Translator {
    * @return an identifier for this translation source
    * @since 4.0.0
    */
-  @NotNull Key name();
+  Key name();
 
   /**
    * Checks if this translator has any translations.
@@ -86,7 +85,7 @@ public interface Translator {
    * @return {@link TriState#TRUE} if any, {@link TriState#NOT_SET} if unknown, or {@link TriState#FALSE} if none
    * @since 4.15.0
    */
-  default @NotNull TriState hasAnyTranslations() {
+  default TriState hasAnyTranslations() {
     return TriState.NOT_SET;
   }
 
@@ -99,7 +98,7 @@ public interface Translator {
    *     the two {@code translate} methods
    * @since 4.20.0
    */
-  default boolean canTranslate(final @NotNull String key, final @NotNull Locale locale) {
+  default boolean canTranslate(final String key, final Locale locale) {
     final Component translatedValue = this.translate(Component.translatable(Objects.requireNonNull(key, "key")), Objects.requireNonNull(locale, "locale"));
     if (translatedValue != null) return true;
     return this.translate(key, locale) != null;
@@ -116,7 +115,7 @@ public interface Translator {
    * @return a message format or {@code null} to skip translation
    * @since 4.0.0
    */
-  @Nullable MessageFormat translate(final @NotNull String key, final @NotNull Locale locale);
+  @Nullable MessageFormat translate(final String key, final Locale locale);
 
   /**
    * Gets a translated component from a translatable component and locale.
@@ -136,7 +135,7 @@ public interface Translator {
    * @return a translated component or {@code null} to use {@link #translate(String, Locale)} instead (if available)
    * @since 4.13.0
    */
-  default @Nullable Component translate(final @NotNull TranslatableComponent component, final @NotNull Locale locale) {
+  default @Nullable Component translate(final TranslatableComponent component, final Locale locale) {
     return null;
   }
 }
