@@ -30,31 +30,33 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
-import net.kyori.examination.ExaminableProperty;
 import org.jetbrains.annotations.Debug;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 
 import static java.util.Objects.requireNonNull;
 
 @Debug.Renderer(text = "\"CompoundBinaryTag[length=\" + this.tags.size() + \"]\"", childrenArray = "this.tags.entrySet().toArray()", hasChildren = "!this.tags.isEmpty()")
-final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundBinaryTag {
-  static final CompoundBinaryTag EMPTY = new CompoundBinaryTagImpl(Collections.emptyMap());
-  private final Map<String, BinaryTag> tags;
-  private final int hashCode;
+record CompoundBinaryTagImpl(Map<String, BinaryTag> tags) implements CompoundBinaryTag {
 
-  CompoundBinaryTagImpl(final Map<String, BinaryTag> tags) {
-    this.tags = Collections.unmodifiableMap(tags);
-    this.hashCode = tags.hashCode();
+  static CompoundBinaryTag create(final Map<String, BinaryTag> tags) {
+    return new CompoundBinaryTagImpl(Map.copyOf(tags));
   }
 
-  public boolean contains(final @NotNull String key, final @NotNull BinaryTagType<?> type) {
-    final @Nullable BinaryTag tag = this.tags.get(key);
-    return tag != null && type.test(tag.type());
+  static final CompoundBinaryTag EMPTY = new CompoundBinaryTagImpl(Collections.emptyMap());
+
+  @Override
+  public boolean contains(final String key) {
+    return this.tags.containsKey(key);
   }
 
   @Override
-  public @NotNull Set<String> keySet() {
+  public boolean contains(final String key, final BinaryTagType<?> type) {
+    final BinaryTag tag = this.tags.get(requireNonNull(key, "key"));
+    return tag != null && requireNonNull(type, "type").test(tag.type());
+  }
+
+  @Override
+  public Set<String> keySet() {
     return Collections.unmodifiableSet(this.tags.keySet());
   }
 
@@ -74,12 +76,12 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull CompoundBinaryTag put(final @NotNull String key, final @NotNull BinaryTag tag) {
+  public CompoundBinaryTag put(final String key, final BinaryTag tag) {
     return this.edit(map -> map.put(key, tag));
   }
 
   @Override
-  public @NotNull CompoundBinaryTag put(final @NotNull CompoundBinaryTag tag) {
+  public CompoundBinaryTag put(final CompoundBinaryTag tag) {
     return this.edit(map -> {
       for (final String key : tag.keySet()) {
         map.put(key, tag.get(key));
@@ -88,12 +90,12 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull CompoundBinaryTag put(final @NotNull Map<String, ? extends BinaryTag> tags) {
+  public CompoundBinaryTag put(final Map<String, ? extends BinaryTag> tags) {
     return this.edit(map -> map.putAll(tags));
   }
 
   @Override
-  public @NotNull CompoundBinaryTag remove(final @NotNull String key, final @Nullable Consumer<? super BinaryTag> removed) {
+  public CompoundBinaryTag remove(final String key, final @Nullable Consumer<? super BinaryTag> removed) {
     if (!this.tags.containsKey(key)) {
       return this;
     }
@@ -106,7 +108,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public byte getByte(final @NotNull String key, final byte defaultValue) {
+  public byte getByte(final String key, final byte defaultValue) {
     if (this.contains(key, BinaryTagTypes.BYTE)) {
       return ((NumberBinaryTag) this.tags.get(key)).byteValue();
     }
@@ -114,7 +116,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public short getShort(final @NotNull String key, final short defaultValue) {
+  public short getShort(final String key, final short defaultValue) {
     if (this.contains(key, BinaryTagTypes.SHORT)) {
       return ((NumberBinaryTag) this.tags.get(key)).shortValue();
     }
@@ -122,7 +124,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public int getInt(final @NotNull String key, final int defaultValue) {
+  public int getInt(final String key, final int defaultValue) {
     if (this.contains(key, BinaryTagTypes.INT)) {
       return ((NumberBinaryTag) this.tags.get(key)).intValue();
     }
@@ -130,7 +132,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public long getLong(final @NotNull String key, final long defaultValue) {
+  public long getLong(final String key, final long defaultValue) {
     if (this.contains(key, BinaryTagTypes.LONG)) {
       return ((NumberBinaryTag) this.tags.get(key)).longValue();
     }
@@ -138,7 +140,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public float getFloat(final @NotNull String key, final float defaultValue) {
+  public float getFloat(final String key, final float defaultValue) {
     if (this.contains(key, BinaryTagTypes.FLOAT)) {
       return ((NumberBinaryTag) this.tags.get(key)).floatValue();
     }
@@ -146,7 +148,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public double getDouble(final @NotNull String key, final double defaultValue) {
+  public double getDouble(final String key, final double defaultValue) {
     if (this.contains(key, BinaryTagTypes.DOUBLE)) {
       return ((NumberBinaryTag) this.tags.get(key)).doubleValue();
     }
@@ -154,7 +156,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public byte@NotNull[] getByteArray(final @NotNull String key) {
+  public byte[] getByteArray(final String key) {
     if (this.contains(key, BinaryTagTypes.BYTE_ARRAY)) {
       return ((ByteArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -162,7 +164,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public byte@NotNull[] getByteArray(final @NotNull String key, final byte@NotNull[] defaultValue) {
+  public byte @Nullable [] getByteArray(final String key, final byte @Nullable [] defaultValue) {
     if (this.contains(key, BinaryTagTypes.BYTE_ARRAY)) {
       return ((ByteArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -170,7 +172,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull String getString(final @NotNull String key, final @NotNull String defaultValue) {
+  public @Nullable String getString(final String key, final @Nullable String defaultValue) {
     if (this.contains(key, BinaryTagTypes.STRING)) {
       return ((StringBinaryTag) this.tags.get(key)).value();
     }
@@ -178,7 +180,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull ListBinaryTag getList(final @NotNull String key, final @NotNull ListBinaryTag defaultValue) {
+  public @Nullable ListBinaryTag getList(final String key, final @Nullable ListBinaryTag defaultValue) {
     if (this.contains(key, BinaryTagTypes.LIST)) {
       return (ListBinaryTag) this.tags.get(key);
     }
@@ -186,7 +188,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull ListBinaryTag getList(final @NotNull String key, final @NotNull BinaryTagType<? extends BinaryTag> expectedType, final @NotNull ListBinaryTag defaultValue) {
+  public @Nullable ListBinaryTag getList(final String key, final BinaryTagType<? extends BinaryTag> expectedType, final @Nullable ListBinaryTag defaultValue) {
     if (this.contains(key, BinaryTagTypes.LIST)) {
       final ListBinaryTag tag = (ListBinaryTag) this.tags.get(key);
       if (expectedType.test(tag.elementType())) {
@@ -197,7 +199,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public @NotNull CompoundBinaryTag getCompound(final @NotNull String key, final @NotNull CompoundBinaryTag defaultValue) {
+  public @Nullable CompoundBinaryTag getCompound(final String key, final @Nullable CompoundBinaryTag defaultValue) {
     if (this.contains(key, BinaryTagTypes.COMPOUND)) {
       return (CompoundBinaryTag) this.tags.get(key);
     }
@@ -205,7 +207,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public int@NotNull[] getIntArray(final @NotNull String key) {
+  public int[] getIntArray(final String key) {
     if (this.contains(key, BinaryTagTypes.INT_ARRAY)) {
       return ((IntArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -213,7 +215,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public int@NotNull[] getIntArray(final @NotNull String key, final int@NotNull[] defaultValue) {
+  public int @Nullable [] getIntArray(final String key, final int @Nullable [] defaultValue) {
     if (this.contains(key, BinaryTagTypes.INT_ARRAY)) {
       return ((IntArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -221,7 +223,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public long@NotNull[] getLongArray(final @NotNull String key) {
+  public long[] getLongArray(final String key) {
     if (this.contains(key, BinaryTagTypes.LONG_ARRAY)) {
       return ((LongArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -229,7 +231,7 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public long@NotNull[] getLongArray(final @NotNull String key, final long@NotNull[] defaultValue) {
+  public long @Nullable [] getLongArray(final String key, final long @Nullable [] defaultValue) {
     if (this.contains(key, BinaryTagTypes.LONG_ARRAY)) {
       return ((LongArrayBinaryTag) this.tags.get(key)).value();
     }
@@ -249,28 +251,13 @@ final class CompoundBinaryTagImpl extends AbstractBinaryTag implements CompoundB
   }
 
   @Override
-  public boolean equals(final Object that) {
-    return this == that || (that instanceof CompoundBinaryTagImpl && this.tags.equals(((CompoundBinaryTagImpl) that).tags));
-  }
-
-  @Override
-  public int hashCode() {
-    return this.hashCode;
-  }
-
-  @Override
-  public @NotNull Stream<? extends ExaminableProperty> examinableProperties() {
-    return Stream.of(ExaminableProperty.of("tags", this.tags));
-  }
-
-  @Override
   @SuppressWarnings({"unchecked", "rawtypes"})
-  public @NotNull Iterator<Map.Entry<String, ? extends BinaryTag>> iterator() {
+  public Iterator<Map.Entry<String, ? extends BinaryTag>> iterator() {
     return (Iterator) this.tags.entrySet().iterator();
   }
 
   @Override
-  public void forEach(final @NotNull Consumer<? super Map.Entry<String, ? extends BinaryTag>> action) {
+  public void forEach(final Consumer<? super Map.Entry<String, ? extends BinaryTag>> action) {
     this.tags.entrySet().forEach(requireNonNull(action, "action"));
   }
 }
